--- a/src/components/divider/section-divider.astro
+++ b/src/components/divider/section-divider.astro
@@ -1,28 +1,3 @@
-<hr class="section-divider" />
-
-<style>
-  :root {
-    --light-section-divider: hsl(220, 8%, 75%);
-    --dark-section-divider: hsl(220, 8%, 30%);
-
-    --section-divider: var(--light-section-divider);
-  }
-
-  @media (prefers-color-scheme: dark) {
-    :root {
-      --section-divider: var(--dark-section-divider);
-    }
-  }
-
-  .section-divider {
-    border: none;
-    padding: 1px 0;
-    background: linear-gradient(
-      to right,
-      transparent,
-      var(--section-divider),
-      transparent
-    );
-    margin: 0;
-  }
-</style>
+<hr
+  class="my-0 h-[2px] w-full border-none bg-gradient-to-r from-transparent via-gray-300 to-transparent dark:via-gray-800"
+/>
