--- a/src/components/brief-intro/school-history.astro
+++ b/src/components/brief-intro/school-history.astro
@@ -2,128 +2,65 @@
 // Assuming the `getTranslations` function and `education` data structure are similar to the previous context
 import { getTranslations } from "../../i18n/utils"
 import Tooltip from "./detail-tooltip.astro"
+import { cn } from "utils/cn.astro"
 
 const { lang } = Astro.props
 const { education } = getTranslations(lang)
 ---
 
-<div class="vstack">
-	<table class="education-table">
-		<thead>
-			<tr class="table-header">
-				<th class="table-header-cell table-header-cell--left">
-					{education.headings.period}
-				</th>
-				<th class="table-header-cell">
-					{education.headings.schoolName}
-				</th>
-				<th class="table-header-cell table-header-cell--right">
-					{education.headings.location}
-				</th>
-			</tr>
-		</thead>
-		<tbody>
-			{
-				education.schools.map((school, index) => (
-					<tr
-						class={`table-row ${index % 2 === 0 ? "table-row--even" : "table-row--odd"}`}>
-						<td
-							class={`table-cell ${index === education.schools.length - 1 ? "table-cell--bottom-left" : ""}`}>
-							<Tooltip
-								text={school.duration}
-								tooltip={`${school.start} - ${school.end}`}
-								float="right"
-							/>
-						</td>
-						<td class="table-cell">
-							<Tooltip text={school.name} tooltip={school.grade} />
-						</td>
-						<td
-							class={`table-cell ${index === education.schools.length - 1 ? "table-cell--bottom-right" : ""}`}>
-							<Tooltip
-								text={school.location.country}
-								tooltip={school.location.region}
-							/>
-						</td>
-					</tr>
-				))
-			}
-		</tbody>
-	</table>
+<div class="w-[min(50rem,85vw,100%)] overflow-x-auto">
+  <table>
+    <thead class="bg-gray-200 dark:bg-gray-700">
+      <tr>
+        <th class="rounded-tl-lg p-2">
+          {education.headings.period}
+        </th>
+        <th>
+          {education.headings.schoolName}
+        </th>
+        <th class="rounded-tr-lg">
+          {education.headings.location}
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      {
+        education.schools.map((school, index) => (
+          <tr
+            class={cn(
+              "text-[1rem]",
+              index % 2 === 0
+                ? "bg-gray-100 dark:bg-gray-800"
+                : "bg-gray-200 dark:bg-gray-700",
+            )}
+          >
+            <td
+              class={cn("text-nowrap px-2 py-1", {
+                "rounded-bl-lg": index === education.schools.length - 1,
+              })}
+            >
+              <Tooltip
+                text={school.duration}
+                tooltip={`${school.start} - ${school.end}`}
+                float="right"
+              />
+            </td>
+            <td class="text-nowrap px-2 py-1">
+              <Tooltip text={school.name} tooltip={school.grade} />
+            </td>
+            <td
+              class={cn("text-nowrap px-2 py-1", {
+                "rounded-br-lg": index === education.schools.length - 1,
+              })}
+            >
+              <Tooltip
+                text={school.location.country}
+                tooltip={school.location.region}
+              />
+            </td>
+          </tr>
+        ))
+      }
+    </tbody>
+  </table>
 </div>
-
-<style>
-	.vstack {
-		overflow-x: auto;
-		width: min(50rem, 85vw, 100%);
-	}
-
-	.education-table {
-		table-layout: auto;
-		white-space: nowrap;
-		border-radius: 0.5rem;
-		border-collapse: collapse;
-		table-layout: fixed;
-	}
-
-	.table-header {
-		background-color: var(--table-head);
-		padding: 1rem;
-	}
-
-	.table-header-cell {
-		padding: 0.7rem 1rem;
-		font-size: 1rem;
-	}
-
-	.table-header-cell--left {
-		border-top-left-radius: 0.5rem;
-	}
-
-	.table-header-cell--right {
-		border-top-right-radius: 0.5rem;
-	}
-
-	.table-row--even {
-		background-color: var(--table-row-even-bg);
-	}
-
-	.table-row--odd {
-		background-color: var(--table-row-odd-bg);
-	}
-
-	.table-cell {
-		padding: 0.5rem 1rem;
-		vertical-align: middle;
-		font-size: 1rem;
-	}
-
-	.table-cell--bottom-left {
-		border-bottom-left-radius: 0.5rem;
-	}
-
-	.table-cell--bottom-right {
-		border-bottom-right-radius: 0.5rem;
-	}
-
-	:root {
-		--light-table-row-even-bg: hsl(210, 66%, 97%);
-		--dark-table-row-odd-bg: hsl(216, 25%, 20%);
-		--light-table-row-odd-bg: hsl(216, 33%, 94%);
-		--dark-table-row-even-bg: hsl(210, 30%, 15%);
-		--light-table-head: hsl(180, 100%, 75%);
-		--dark-table-head: hsl(180, 100%, 20%);
-
-		--table-row-even-bg: var(--light-table-row-even-bg);
-		--table-row-odd-bg: var(--light-table-row-odd-bg);
-		--table-head: var(--light-table-head);
-	}
-
-	@media (prefers-color-scheme: dark) {
-		:root {
-			--table-row-even-bg: var(--dark-table-row-even-bg);
-			--table-row-odd-bg: var(--dark-table-row-odd-bg);
-			--table-head: var(--dark-table-head);
-		}
-	}
-</style>
