--- a/src/components/divider/content-divider.astro
+++ b/src/components/divider/content-divider.astro
@@ -1,28 +1,3 @@
-<hr class="content-divider" />
-
-<style is:global>
-  :root {
-    --light-content-divider: hsl(213, 9%, 46%);
-    --dark-content-divider: hsl(213, 9%, 26%);
-
-    --content-divider: var(--light-content-divider);
-  }
-
-  @media (prefers-color-scheme: dark) {
-    :root {
-      --content-divider: var(--dark-content-divider);
-    }
-  }
-
-  .content-divider {
-    border: none;
-    padding: 1px 0;
-    background: linear-gradient(
-      to right,
-      transparent,
-      var(--content-divider),
-      transparent
-    );
-    margin: 0;
-  }
-</style>
+<hr
+  class="my-0 h-[2px] border-none bg-gradient-to-r from-transparent via-gray-500 to-transparent dark:via-gray-700"
+/>
