--- a/src/components/footer/socials.astro
+++ b/src/components/footer/socials.astro
@@ -3,11 +3,13 @@ import GitHubIcon from "../../icons/github.astro"
 import XIcon from "../../icons/x.astro"
 ---
 
-<div class="social-icons">
+<div
+  class="flex items-center justify-center gap-2 rounded-md py-2 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300"
+>
   <a
     href="https://x.com/taroj1205"
     target="_blank"
-    class="social-icon x-icon"
+    class="h-12 w-12 rounded-md p-2 transition-colors duration-300 hover:bg-zinc-100 dark:hover:bg-zinc-800"
     title="X (Twitter)"
   >
     <XIcon size="100%" />
@@ -15,34 +17,9 @@ import XIcon from "../../icons/x.astro"
   <a
     href="https://github.com/taroj1205"
     target="_blank"
-    class="social-icon github-icon"
+    class="h-12 w-12 rounded-md p-2 transition-colors duration-300 hover:bg-zinc-100 dark:hover:bg-zinc-800"
     title="GitHub"
   >
     <GitHubIcon size="100%" />
   </a>
 </div>
-
-<style>
-  .social-icons {
-    display: flex;
-    padding: 0.5rem;
-    gap: 0.5rem;
-  }
-
-  .social-icon {
-    border-radius: 15%;
-    display: grid;
-    place-items: center;
-    width: 2rem;
-    height: 2rem;
-    transition: all 0.3s ease;
-    padding: 0.5rem;
-    color: var(--gray-color);
-    background-color: transparent;
-    font-size: 1.5rem;
-  }
-  .social-icon:hover {
-    color: hsl(0, 0%, 83%);
-    background-color: hsl(0, 0%, 20%);
-  }
-</style>
