--- a/src/components/header/desktop/dropdown.astro
+++ b/src/components/header/desktop/dropdown.astro
@@ -1,4 +1,5 @@
 ---
+import { cn } from "utils/cn.astro"
 import type { Locales } from "../../../i18n/ui"
 import BlogIcon from "../../../icons/blog.astro"
 import CubesIcon from "../../../icons/cubes.astro"
@@ -8,196 +9,55 @@ import { titles } from "./items"
 const { lang } = Astro.props as { lang: Locales }
 ---
 
-<form class="desktop-dropdown">
-  {
-    titles.map((title) => (
-      <>
-        <input
-          type="radio"
-          id={title[lang].toLowerCase()}
-          name="dropdown"
-          class="overlay-toggle"
-        />
-        <label for={title[lang].toLowerCase()}>
-          {title["en"] === "Blog" ? (
-            <BlogIcon size="1em" />
-          ) : title["en"] === "Apps" ? (
-            <CubesIcon size="1em" />
-          ) : (
-            <DropboxIcon size="1em" />
-          )}
-          {title[lang]}
-          <div class="dropdown__indicator">
-            <div />
+<form class="hidden place-items-center sm:grid">
+  <ul class="flex items-center justify-between gap-2">
+    {
+      titles.map((title) => (
+        <li class="group relative flex place-items-center text-nowrap">
+          <input
+            type="radio"
+            id={title[lang].toLowerCase()}
+            name="dropdown"
+            class="peer sr-only"
+          />
+          <label
+            for={title[lang].toLowerCase()}
+            class={cn(
+              "text-md flex w-full min-w-fit cursor-pointer items-center justify-start gap-2 rounded-md px-4 py-2 font-semibold text-gray-700",
+              "transition-colors duration-300 hover:bg-blue-300 hover:text-gray-700 peer-checked:bg-blue-300 peer-checked:text-black",
+              "peer-checked:hover:bg-blue-300 dark:text-gray-300 dark:hover:bg-sky-900 dark:hover:text-gray-300",
+              "peer-checked:dark:bg-zinc-800 peer-checked:dark:text-white dark:peer-checked:hover:bg-sky-900",
+            )}
+          >
+            {title["en"] === "Blog" ? (
+              <BlogIcon size="1rem" class:list={["min-w-4"]} />
+            ) : title["en"] === "Apps" ? (
+              <CubesIcon size="1rem" class:list={["min-w-4"]} />
+            ) : (
+              <DropboxIcon size="1rem" class:list={["min-w-4"]} />
+            )}
+            {title[lang]}
+            <div
+              class={cn(
+                "relative h-2 w-2 rotate-90 scale-[0.7]",
+                "before:absolute before:h-[2px] before:w-[10px] before:-translate-y-[3px] before:rotate-45 before:bg-gray-700 before:dark:bg-gray-300",
+                "after:absolute after:h-[2px] after:w-[10px] after:translate-y-[3px] after:-rotate-45 after:bg-gray-700 after:dark:bg-gray-300",
+                "before:transition-colors before:duration-300",
+                "before:group-has-[input:checked]:bg-black before:dark:group-has-[input:checked]:bg-white",
+                "after:group-has-[input:checked]:bg-black after:dark:group-has-[input:checked]:bg-white",
+              )}
+            />
+          </label>
+          <div class="absolute bottom-0 left-0 right-0 top-12 z-10 hidden h-fit w-fit space-y-2 rounded-md bg-white p-2 peer-checked:block dark:bg-black">
+            <DropdownContent lang={lang} section={title.en.toLowerCase()} />
           </div>
-        </label>
-        <div class="dropdown__content">
-          <DropdownContent lang={lang} section={title.en.toLowerCase()} />
-        </div>
-      </>
-    ))
-  }
-  <input
-    type="radio"
-    id="close"
-    class="dropdown__close"
-    name="dropdown"
-    checked
-  />
-  <label for="close"> </label>
+        </li>
+      ))
+    }
+  </ul>
+  <input type="radio" id="close" class="peer sr-only" name="dropdown" checked />
+  <label
+    for="close"
+    class="fixed left-0 top-0 -z-10 h-svh w-full bg-black/[.5] backdrop-blur-sm backdrop-filter transition-colors duration-300 peer-checked:hidden peer-checked:bg-white"
+  ></label>
 </form>
-
-<style>
-  .desktop-dropdown {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    place-self: center;
-    font-size: 1.125rem;
-  }
-
-  @container (max-width: 530px) {
-    .desktop-dropdown {
-      display: none;
-    }
-  }
-
-  label {
-    place-items: center;
-    display: grid;
-    z-index: 99;
-  }
-
-  input {
-    display: none;
-  }
-
-  input[type="radio"]:checked + label {
-    background-color: var(--button-hover-background);
-  }
-
-  .desktop-dropdown:has(input[type="radio"]#close:not(:checked))
-    input[type="radio"]:not(:checked)
-    + label:not([for="close"]) {
-    background-color: var(--background-white);
-  }
-
-  input[type="radio"]:checked + label + .dropdown__content {
-    display: flex;
-  }
-
-  label {
-    display: grid;
-    place-items: center;
-    grid-template-columns: auto 1fr auto;
-    transition:
-      background-color 0.3s ease-in-out,
-      opacity 0.3s ease-in-out;
-  }
-
-  label:not([for="close"]) {
-    cursor: pointer;
-    padding: 0.5rem 1rem;
-    border-radius: 0.5rem;
-    place-self: center;
-  }
-
-  label:not([for="close"]):hover {
-    background-color: var(--button-hover-background);
-  }
-
-  label svg {
-    margin-right: 0.5em;
-  }
-
-  .dropdown__content {
-    display: none;
-    position: absolute;
-    top: 3rem;
-    background-color: var(--overlay-background-color);
-    border-radius: 0.5rem;
-    width: min(300px, 100%);
-    left: 0;
-    right: 0;
-    margin-inline: auto;
-    -webkit-backdrop-filter: blur(15px);
-    backdrop-filter: blur(15px);
-    z-index: 99;
-    align-items: start;
-    flex-direction: column;
-    gap: 0.5em;
-    padding: 0.5em;
-  }
-
-  #close + label {
-    opacity: 0;
-    -webkit-backdrop-filter: blur(15px);
-    backdrop-filter: blur(15px);
-    background-color: rgba(0, 0, 0, 0.5);
-  }
-
-  #close:not(input[type="radio"]:checked) + label {
-    display: flex;
-    top: 0;
-    left: 0;
-    position: absolute;
-    z-index: 98;
-    height: 100svh;
-    width: 100%;
-    opacity: 1;
-  }
-
-  .dropdown__indicator {
-    display: grid;
-    place-items: center;
-    margin-top: 1px;
-    margin-left: 0.3rem;
-  }
-
-  .dropdown__indicator div {
-    position: relative;
-    width: 0.5rem;
-    height: 0.5rem;
-    transform: rotate(90deg) scale(0.7);
-  }
-
-  .dropdown__indicator div::before,
-  .dropdown__indicator div::after {
-    content: "";
-    position: absolute;
-    right: 0;
-    width: 10px;
-    height: 2px;
-    background-color: var(--text-color);
-    transition: transform 0.3s ease-in-out;
-    transform: translateY(-3px) rotate(45deg);
-  }
-  .dropdown__indicator div::after {
-    transform: translateY(3px) rotate(-45deg);
-  }
-
-  input[type="radio"]:checked + label .dropdown__indicator div::before {
-    transform: translateY(-3px) rotate(-45deg);
-  }
-
-  input[type="radio"]:checked + label .dropdown__indicator div::after {
-    transform: translateY(3px) rotate(45deg);
-  }
-
-  :root {
-    --light-button-hover-background: hsl(300, 8.17%, 88.04%);
-    --dark-button-hover-background: hsl(0, 0%, 20%);
-
-    --light-overlay-background-color: rgba(255, 255, 255, 0.9);
-    --dark-overlay-background-color: hsla(0, 0%, 0%, 0.9);
-
-    --button-hover-background: var(--light-button-hover-background);
-    --overlay-background-color: var(--light-overlay-background-color);
-  }
-
-  @media (prefers-color-scheme: dark) {
-    :root {
-      --button-hover-background: var(--dark-button-hover-background);
-      --overlay-background-color: var(--dark-overlay-background-color);
-    }
-  }
-</style>
