--- a/src/components/header/index.astro
+++ b/src/components/header/index.astro
@@ -7,48 +7,16 @@ import MobileMenu from "./mobile/index.astro"
 const { lang } = Astro.props
 ---
 
-<header>
-  <nav>
-    <div></div>
+<header
+  class="sticky top-0 z-50 flex w-full flex-col items-center justify-center bg-white/50 backdrop-blur-sm dark:bg-black/50"
+>
+  <nav
+    class="grid h-16 w-[min(64rem,100%)] grid-cols-2 place-items-center gap-4 py-1 sm:h-12 sm:grid-cols-3"
+  >
+    <div class="mr-8 hidden h-6 w-6 sm:block"></div>
     <MobileMenu lang={lang} />
     <Dropdown lang={lang} />
     <LangToggle lang={lang} />
   </nav>
   <SectionDivider />
 </header>
-
-<style>
-  header {
-    position: sticky;
-    top: 0;
-    left: 0;
-    -webkit-backdrop-filter: blur(15px);
-    backdrop-filter: blur(15px);
-    text-align: center;
-    z-index: 99;
-    container-type: inline-size;
-  }
-
-  nav {
-    display: flex;
-    justify-content: space-between;
-    height: 3rem;
-    width: min(64rem, 100%);
-    margin-inline: auto;
-  }
-
-  div {
-    aspect-ratio: 1 / 1;
-    width: 1.5rem;
-    margin-right: 2rem;
-  }
-
-  @container (max-width: 530px) {
-    nav {
-      height: 4rem;
-    }
-    div {
-      display: none;
-    }
-  }
-</style>
