--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -14,31 +14,18 @@ export const getStaticPaths = () => {
 ---
 
 <Layout title={metadata.title} description={metadata.description} lang={lang}>
-  <h1>404</h1>
-  <h2>{heading.notFound}</h2>
-  <a href={`/${lang}`}>{notFound.goBack}</a>
+  <div
+    class="flex flex-col items-center justify-center bg-gray-100 dark:bg-gray-900"
+  >
+    <h1 class="text-7xl font-bold text-gray-800 dark:text-gray-200">404</h1>
+    <h2 class="mt-4 text-2xl text-gray-600 dark:text-gray-400">
+      {heading.notFound}
+    </h2>
+    <a
+      href={`/${lang}`}
+      class="mt-6 rounded bg-blue-500 px-4 py-2 text-lg text-white hover:bg-blue-600 dark:bg-blue-700 dark:hover:bg-blue-800"
+    >
+      {notFound.goBack}
+    </a>
+  </div>
 </Layout>
-
-<style>
-  h1 {
-    font-size: var(--fontSizes-7xl);
-  }
-
-  h1,
-  h2,
-  a {
-    text-align: center;
-  }
-  a {
-    text-decoration: none;
-    color: var(--link-color);
-    width: fit-content;
-    width: -moz-fit-content;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  a:hover {
-    text-decoration: underline;
-  }
-</style>
