--- a/src/components/brief-intro/detail-tooltip.astro
+++ b/src/components/brief-intro/detail-tooltip.astro
@@ -1,5 +1,4 @@
 ---
-import { cn } from "utils/cn.astro"
 const { text, tooltip, float } = Astro.props
 
 const isRight = float === "right"
@@ -11,9 +10,12 @@ const isRight = float === "right"
 >
   <p>{text}</p>
   <span
-    class={cn(
-      "rounded-md absolute text-center px-2 py-1 bottom-full left-1/2 opacity-0 group-hover:opacity-100 transition-opacity duration-300 -translate-x-1/2 min-w-32 max-w-60 bg-black invisible group-hover:visible",
-      { "float-right left-full translate-x-0": isRight },
-    )}>{tooltip}</span
+    class:list={[
+      "invisible absolute bottom-full left-1/2 min-w-32 max-w-60 -translate-x-1/2 rounded-md bg-white px-2 py-1 text-center text-black opacity-0 transition-opacity duration-300 group-hover:visible group-hover:opacity-100",
+      isRight && "left-full float-right translate-x-0",
+      "dark:bg-black dark:text-white",
+    ]}
   >
+    {tooltip}
+  </span>
 </div>
