--- a/src/components/timeline/index.astro
+++ b/src/components/timeline/index.astro
@@ -19,7 +19,7 @@ timelineJSON.sort(
   {
     timelineJSON.map((item, index) => (
       <li class="mb-10 ms-6">
-        <span class="absolute -start-3 mt-0.5 flex h-6 w-6 items-center justify-center rounded-full bg-blue-100 ring-8 ring-white dark:bg-blue-900 dark:ring-gray-900">
+        <span class="absolute -start-3 mt-0.5 flex h-6 w-6 items-center justify-center rounded-full bg-blue-100 ring-8 ring-white dark:bg-blue-900 dark:ring-zinc-900">
           <svg
             class="h-2.5 w-2.5 text-blue-800 dark:text-blue-300"
             aria-hidden="true"
